# internal/controller/http/v1/types.go
@@ -11,12 +11,12 @@ func NewErrorResponse(err error) ErrorResponse {
 }
 
 type SignUpRequest struct {
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8"`
-	Name     string `json:"name" binding:"required"`
-	Nickname string `json:"nickname" binding:"required"`
+	Email    string `json:"email" binding:"required,email" example:"user@example.com"`
+	Password string `json:"password" binding:"required,min=8" example:"password123"`
+	Name     string `json:"name" binding:"required" example:"John Doe"`
+	Nickname string `json:"nickname" binding:"required" example:"johndoe"`
 }
 
 type SignUpResponse struct {
-	UserID uint `json:"user_id"`
+	UserID uint `json:"user_id" example:"1"`
 }
